# effective-programming-techniques

./: .gitignore  README.md
C++Sandbox/: CMakeLists.txt
List1/: CMakeLists.txt  a.out  main.cpp
List1/sources/: CTable.cpp  CTable.h  TablesFunctions.cpp  TablesFunctions.h
List3/: CMakeLists.txt  main.cpp
List3/sources/: CNodeStatic.cpp  CNodeStatic.h
List3/sources/CNodeDynamic/: CNodeDynamic.cpp  CNodeDynamic.h
List3/sources/CNodeStatic/: CNodeStatic.cpp  CNodeStatic.h
List3/sources/CTreeDynamic/: CTreeDynamic.cpp  CTreeDynamic.h
List3/sources/CTreeStatic/: CTreeStatic.cpp  CTreeStatic.h
Lista4/: CMakeLists.txt  main.cpp
Lista4/sources/: CNodeDynamic.h  CTreeDynamic.h
Lista4/sources/Node/: CNodeDynamic.cpp  CNodeDynamic.h
Lista4/sources/Tree/: CTreeDynamic.cpp  CTreeDynamic.h
Lista5/: CMakeLists.txt  main.cpp
Lista5/sources/: CMySmartPointer.h  CRefCounter.h  CTab.h  CTable.h
Lista5/sources/CTab/: CTab.cpp  CTab.h
Lista5/sources/CTable/: CTable.cpp  CTable.h
Lista5/sources/modyfikacja/: VectorWrapper.cpp  VectorWrapper.h
MiniProject/: CMakeLists.txt  main.cpp
MiniProject/CGAOptimizer/: CGAOptimizer.cpp  CGAOptimizer.h
MiniProject/CGAOptimizer/CGAIndividual/: CGAIndividual.cpp  CGAIndividual.h
MiniProject/Max3Sat/: CMax3SatProblem.cpp  CMax3SatProblem.h  Node.cpp  Node.h  Sentence.cpp  Sentence.h
Sandbox/: CMakeLists.txt  main.cpp
